# pirate-riddle

./: LICENSE  README.md  package.yaml  pirate-riddle.cabal
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
