cabal-version: 1.12

name:           pirate-riddle
version:        0.1.0.0
author:         Magnus N. Malmquist
copyright:      2023 Magnus N. Malmquist
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      Lib
  other-modules:
      Paths_pirate_riddle
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable pirate-riddle-exe
  main-is: Main.hs
  other-modules:
      Paths_pirate_riddle
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pirate-riddle
  default-language: Haskell2010

test-suite pirate-riddle-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_pirate_riddle
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pirate-riddle
  default-language: Haskell2010
